# mediChat

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_api  README.md  api.html  app.html  eval.html  genindex.html  index.html  ingest.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  retrieve.html  search.html  searchindex.js
_modules/: index.html
_modules/src/medichat/: eval.html  retrieve.html
_sources/: api.rst.txt  app.rst.txt  index.rst.txt  ingest.rst.txt  retrieve.rst.txt
docs/source/: conf.py  eval.rst  index.rst
src/medichat/: api.py  app.py  config.py  eval.py  gcs_to_cloudsql.ipynb  ingest.py  retrieve.py
